[tool.poetry]
name = "dynpy"
version = "0.1.0"
description = ""
authors = ["Erich Raschle <erichraschle@gmail.com>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.6"
ruff-lsp = "^0.0.59"
ruff = "^0.8.0"
pyright = "^1.1.389"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
